--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
 	background: #32333b;
 	margin: 0;
@@ -11,10 +15,9 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	display: flex;
-	width: 80%;
+	width: 70%;
 	/*width: 1000px;*/
 	height: 500px;
-	margin: 0 auto;
 }
 
 .container .box {
